--- a/src/uimlbuddy/view/EditorOverview.fxml
+++ b/src/uimlbuddy/view/EditorOverview.fxml
@@ -10,8 +10,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="800.0" prefWidth="1280.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="uimlbuddy.view.EditorOverviewController">
+<AnchorPane id="AnchorPane" prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="uimlbuddy.view.EditorOverviewController">
    <children>
       <SplitPane dividerPositions="0.19796557120500782" layoutX="72.0" layoutY="105.0" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
@@ -23,7 +22,7 @@
                         <content>
                           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                  <children>
-                                    <GridPane layoutX="70.0" layoutY="47.0" prefHeight="422.0" prefWidth="376.0" AnchorPane.bottomAnchor="200.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                    <GridPane layoutX="70.0" layoutY="47.0" prefHeight="422.0" prefWidth="376.0" AnchorPane.bottomAnchor="180.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                       <columnConstraints>
                                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="115.0" minWidth="0.0" prefWidth="55.0" />
                                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="228.0" minWidth="10.0" prefWidth="173.0" />
@@ -40,14 +39,24 @@
                                           <Label text="Horizontal Layout" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                                           <Label text="&lt;div/&gt;" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                                           <Label text="&lt;span/&gt;" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                                          <ImageView onMouseClicked="#handleVerticalLayout" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                                          <ImageView GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                                              <image>
-                                                <Image url="@../../assets/vbox.png" />
+                                                <Image url="@../../assets/VBox@2x.png" />
                                              </image>
                                           </ImageView>
                                           <ImageView GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                                              <image>
-                                                <Image url="@../../assets/hbox.png" />
+                                                <Image url="@../../assets/HBox@2x.png" />
+                                             </image>
+                                          </ImageView>
+                                          <ImageView GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+                                             <image>
+                                                <Image url="@../../assets/HTMLTag@2x.png" />
+                                             </image>
+                                          </ImageView>
+                                          <ImageView GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER">
+                                             <image>
+                                                <Image url="@../../assets/HTMLTag@2x.png" />
                                              </image>
                                           </ImageView>
                                        </children>
@@ -70,37 +79,52 @@
                                           <Label text="Date Picker" GridPane.columnIndex="1" GridPane.rowIndex="8" />
                                           <Label text="Text Input" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                                           <Label text="Text Output" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                                          <ImageView GridPane.halignment="CENTER" GridPane.rowIndex="5" GridPane.valignment="CENTER">
-                                             <image>
-                                                <Image url="@../../assets/btn_check.png" />
-                                             </image>
-                                          </ImageView>
-                                          <ImageView GridPane.halignment="CENTER" GridPane.rowIndex="6" GridPane.valignment="CENTER">
-                                             <image>
-                                                <Image url="@../../assets/btn_radio.png" />
-                                             </image>
-                                          </ImageView>
-                                          <ImageView GridPane.halignment="CENTER" GridPane.rowIndex="8" GridPane.valignment="CENTER">
-                                             <image>
-                                                <Image url="@../../assets/date_picker.png" />
-                                             </image>
-                                          </ImageView>
-                                          <ImageView GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER">
-                                             <image>
-                                                <Image url="@../../assets/image_button.png" />
-                                             </image>
-                                          </ImageView>
+                                          <Label text="Drop Down" GridPane.columnIndex="1" GridPane.rowIndex="7" />
                                           <ImageView GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                                              <image>
-                                                <Image url="@../../assets/button.PNG" />
+                                                <Image url="@../../assets/Button@2x.png" />
                                              </image>
                                           </ImageView>
                                           <ImageView GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                                              <image>
-                                                <Image url="@../../assets/sym_keyboard_ok.png" />
+                                                <Image url="@../../assets/Label@2x.png" />
                                              </image>
                                           </ImageView>
-                                          <Label text="Drop Down" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+                                          <ImageView GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+                                             <image>
+                                                <Image url="@../../assets/TextField@2x.png" />
+                                             </image>
+                                          </ImageView>
+                                          <ImageView GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER">
+                                             <image>
+                                                <Image url="@../../assets/TextOutput@2x.png" />
+                                             </image>
+                                          </ImageView>
+                                          <ImageView GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER">
+                                             <image>
+                                                <Image url="@../../assets/ImageView@2x.png" />
+                                             </image>
+                                          </ImageView>
+                                          <ImageView GridPane.halignment="CENTER" GridPane.rowIndex="5" GridPane.valignment="CENTER">
+                                             <image>
+                                                <Image url="@../../assets/CheckBox@2x.png" />
+                                             </image>
+                                          </ImageView>
+                                          <ImageView GridPane.halignment="CENTER" GridPane.rowIndex="6" GridPane.valignment="CENTER">
+                                             <image>
+                                                <Image url="@../../assets/RadioButton@2x.png" />
+                                             </image>
+                                          </ImageView>
+                                          <ImageView GridPane.halignment="CENTER" GridPane.rowIndex="7" GridPane.valignment="CENTER">
+                                             <image>
+                                                <Image url="@../../assets/ChoiceBox@2x.png" />
+                                             </image>
+                                          </ImageView>
+                                          <ImageView GridPane.halignment="CENTER" GridPane.rowIndex="8" GridPane.valignment="CENTER">
+                                             <image>
+                                                <Image url="@../../assets/DatePicker@2x.png" />
+                                             </image>
+                                          </ImageView>
                                        </children>
                                        <columnConstraints>
                                           <ColumnConstraints hgrow="SOMETIMES" maxWidth="183.0" minWidth="10.0" prefWidth="55.0" />
@@ -131,9 +155,19 @@
                                           <Label text="Anchor" GridPane.columnIndex="1" />
                                           <Label text="Table" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                                           <Label text="Image" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                          <ImageView GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                                             <image>
+                                                <Image url="@../../assets/Hyperlink@2x.png" />
+                                             </image>
+                                          </ImageView>
+                                          <ImageView GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+                                             <image>
+                                                <Image url="@../../assets/TableView@2x.png" />
+                                             </image>
+                                          </ImageView>
                                           <ImageView GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
                                              <image>
-                                                <Image url="@../../assets/image_button.png" />
+                                                <Image url="@../../assets/ImageView@2x.png" />
                                              </image>
                                           </ImageView>
                                        </children>
