--- a/src/uimlbuddy/view/ButtonDialog.fxml
+++ b/src/uimlbuddy/view/ButtonDialog.fxml
@@ -21,10 +21,10 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label text="ID" />
-            <Label text="Label" GridPane.rowIndex="1" />
+            <Label text="ID" textFill="RED" />
+            <Label text="Label" textFill="RED" GridPane.rowIndex="1" />
             <Label text="Style" GridPane.rowIndex="2" />
-            <Label text="onClick" GridPane.rowIndex="3" />
+            <Label text="onClick" textFill="RED" GridPane.rowIndex="3" />
             <TextField fx:id="idField" GridPane.columnIndex="1" />
             <TextField fx:id="labelField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <TextField fx:id="styleField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
