--- a/src/uimlbuddy/view/EditorOverview.fxml
+++ b/src/uimlbuddy/view/EditorOverview.fxml
@@ -74,7 +74,7 @@
                                     <GridPane prefHeight="422.0" prefWidth="248.0" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                        <children>
                                           <Label onMouseClicked="#handleButtonNew" text="Button" GridPane.columnIndex="1" />
-                                          <Label text="Image Button" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                                          <Label onMouseClicked="#handleImageButtonNew" text="Image Button" GridPane.columnIndex="1" GridPane.rowIndex="4" />
                                           <Label text="Checkbox" GridPane.columnIndex="1" GridPane.rowIndex="5" />
                                           <Label text="Radio Button" GridPane.columnIndex="1" GridPane.rowIndex="6" />
                                           <Label onMouseClicked="#handleLabelNew" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
@@ -102,7 +102,7 @@
                                                 <Image url="@../../assets/TextOutput@2x.png" />
                                              </image>
                                           </ImageView>
-                                          <ImageView fitHeight="30.0" fitWidth="30.0" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER">
+                                          <ImageView fitHeight="30.0" fitWidth="30.0" onMouseClicked="#handleImageButtonNew" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER">
                                              <image>
                                                 <Image url="@../../assets/ImageView@2x.png" />
                                              </image>
