--- a/src/uimlbuddy/view/RootLayout.fxml
+++ b/src/uimlbuddy/view/RootLayout.fxml
@@ -34,12 +34,7 @@
                         <MenuItem mnemonicParsing="false" onAction="#handleExit" text="Exit" />
                   </items>
                 </Menu>
-                <Menu mnemonicParsing="false" text="Edit">
-                  <items>
-                    <MenuItem mnemonicParsing="false" text="Delete" />
-                  </items>
-                </Menu>
-                  <Menu mnemonicParsing="false" text="Developer">
+                  <Menu mnemonicParsing="false" text="Views">
                      <items>
                         <MenuItem mnemonicParsing="false" onAction="#handleDeveloperView" text="Open Developer View" />
                      </items>
