--- a/src/uimlbuddy/view/DeveloperView.fxml
+++ b/src/uimlbuddy/view/DeveloperView.fxml
@@ -41,19 +41,20 @@
                       <Button mnemonicParsing="false" onAction="#handleSaveDev" text="Save" />
                     </items>
                   </ToolBar>
-                  <HBox VBox.vgrow="ALWAYS">
-                     <children>
+                  <SplitPane dividerPositions="0.2535211267605634" VBox.vgrow="ALWAYS">
+                     <items>
                         <TreeView fx:id="filesTree" prefHeight="200.0" prefWidth="200.0" />
-                        <TabPane prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" HBox.hgrow="ALWAYS">
-                          <tabs>
-                            <Tab fx:id="mainTab" text="Main XSLT">
+                        <TabPane prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE">
+                           <tabs>
+                              <Tab fx:id="mainTab1" text="Main XSLT">
                                  <content>
-                                    <TextArea prefHeight="200.0" prefWidth="200.0" />
-                                 </content></Tab>
-                          </tabs>
+                                    <TextArea fx:id="developerEditorTextArea" prefHeight="200.0" prefWidth="200.0" />
+                                 </content>
+                              </Tab>
+                           </tabs>
                         </TabPane>
-                     </children>
-                  </HBox>
+                     </items>
+                  </SplitPane>
                </children>
             </VBox>
          </children>
