--- a/src/uimlbuddy/view/HorizontalLayout.fxml
+++ b/src/uimlbuddy/view/HorizontalLayout.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="121.0" prefWidth="261.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="uimlbuddy.view.HorizontalLayoutController">
+<AnchorPane id="AnchorPane" prefHeight="151.0" prefWidth="261.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="uimlbuddy.view.HorizontalLayoutController">
    <children>
       <GridPane layoutX="45.0" layoutY="39.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
         <columnConstraints>
@@ -17,10 +17,13 @@
         <rowConstraints>
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <Label text="ID" textFill="RED" GridPane.rowIndex="1" />
             <TextField fx:id="idField" prefHeight="25.0" prefWidth="166.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="styleField" prefHeight="25.0" prefWidth="166.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Label text="Style" GridPane.rowIndex="2" />
          </children>
       </GridPane>
       <HBox layoutX="173.0" layoutY="147.0" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0">
