--- a/src/uimlbuddy/view/ImageButtonDialog.fxml
+++ b/src/uimlbuddy/view/ImageButtonDialog.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="200.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="uimlbuddy.view.ImageButtonDialogController">
+<AnchorPane id="AnchorPane" prefHeight="216.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="uimlbuddy.view.ImageButtonDialogController">
    <children>
       <GridPane layoutX="45.0" layoutY="39.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
         <columnConstraints>
@@ -20,25 +20,28 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <Label text="ID" textFill="RED" />
             <Label text="Label" GridPane.rowIndex="1" />
-            <Label text="Source" textFill="RED" GridPane.rowIndex="2" />
-            <Label text="onClick" textFill="RED" GridPane.rowIndex="3" />
+            <Label text="Source" textFill="RED" GridPane.rowIndex="3" />
+            <Label text="onClick" textFill="RED" GridPane.rowIndex="4" />
             <TextField fx:id="idField" GridPane.columnIndex="1" />
             <TextField fx:id="labelField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField fx:id="sourceField" GridPane.columnIndex="1" GridPane.rowIndex="2">
+            <TextField fx:id="sourceField" GridPane.columnIndex="1" GridPane.rowIndex="3">
                <GridPane.margin>
                   <Insets right="70.0" />
                </GridPane.margin>
             </TextField>
-            <TextField fx:id="onClickField" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <Button fx:id="browseButton" mnemonicParsing="false" onAction="#onBrowseClick" text="Browse ..." textAlignment="RIGHT" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="2">
+            <TextField fx:id="onClickField" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <Button fx:id="browseButton" mnemonicParsing="false" onAction="#onBrowseClick" text="Browse ..." textAlignment="RIGHT" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="3">
                <GridPane.margin>
                   <Insets left="190.0" />
                </GridPane.margin>
             </Button>
+            <Label text="Style" GridPane.rowIndex="2" />
+            <TextField fx:id="styleField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
          </children>
       </GridPane>
       <HBox layoutX="173.0" layoutY="147.0" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0">
