--- a/src/uimlbuddy/view/EditorOverview.fxml
+++ b/src/uimlbuddy/view/EditorOverview.fxml
@@ -20,7 +20,7 @@
                <children>
                   <Accordion fx:id="accordion" layoutX="-41.0" layoutY="79.0" prefHeight="398.0" prefWidth="175.0" AnchorPane.bottomAnchor="300.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <panes>
-                      <TitledPane fx:id="accContainers" animated="false" text="Containers">
+                      <TitledPane fx:id="accContainers" animated="false" expanded="false" text="Containers">
                         <content>
                           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                  <children>
@@ -69,7 +69,7 @@
                                           <Label text="Date Picker" GridPane.columnIndex="1" GridPane.rowIndex="8" />
                                           <Label onMouseClicked="#handleTextInputNew" text="Text Input" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                                           <Label text="Text Output" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                                          <Label text="Drop Down" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+                                          <Label onMouseClicked="#handleDropdownNew" text="Drop Down" GridPane.columnIndex="1" GridPane.rowIndex="7" />
                                           <ImageView fitHeight="30.0" fitWidth="30.0" onMouseClicked="#handleButtonNew" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                                              <image>
                                                 <Image url="@../../assets/Button@2x.png" />
@@ -105,7 +105,7 @@
                                                 <Image url="@../../assets/RadioButton@2x.png" />
                                              </image>
                                           </ImageView>
-                                          <ImageView fitHeight="30.0" fitWidth="30.0" GridPane.halignment="CENTER" GridPane.rowIndex="7" GridPane.valignment="CENTER">
+                                          <ImageView fitHeight="30.0" fitWidth="30.0" onMouseClicked="#handleDropdownNew" GridPane.halignment="CENTER" GridPane.rowIndex="7" GridPane.valignment="CENTER">
                                              <image>
                                                 <Image url="@../../assets/ChoiceBox@2x.png" />
                                              </image>
