fixed image button dialog fields tab order

--- a/src/uimlbuddy/view/ImageButtonDialog.fxml
+++ b/src/uimlbuddy/view/ImageButtonDialog.fxml
@@ -27,21 +27,21 @@
             <Label text="Label" GridPane.rowIndex="1" />
             <Label text="Source" textFill="RED" GridPane.rowIndex="3" />
             <Label text="onClick" textFill="RED" GridPane.rowIndex="4" />
+            <Label text="Style" GridPane.rowIndex="2" />
             <TextField fx:id="idField" GridPane.columnIndex="1" />
             <TextField fx:id="labelField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="styleField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <TextField fx:id="sourceField" GridPane.columnIndex="1" GridPane.rowIndex="3">
                <GridPane.margin>
                   <Insets right="70.0" />
                </GridPane.margin>
             </TextField>
-            <TextField fx:id="onClickField" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-            <Button fx:id="browseButton" mnemonicParsing="false" onAction="#onBrowseClick" text="Browse ..." textAlignment="RIGHT" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="3">
+            <Button fx:id="browseButton" mnemonicParsing="false" text="Browse..." GridPane.columnIndex="1" GridPane.rowIndex="3">
                <GridPane.margin>
-                  <Insets left="190.0" />
+                  <Insets left="192.0" />
                </GridPane.margin>
             </Button>
-            <Label text="Style" GridPane.rowIndex="2" />
-            <TextField fx:id="styleField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="onClickField" GridPane.columnIndex="1" GridPane.rowIndex="4" />
          </children>
       </GridPane>
       <HBox layoutX="173.0" layoutY="147.0" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0">
