--- a/src/uimlbuddy/view/EditorOverview.fxml
+++ b/src/uimlbuddy/view/EditorOverview.fxml
@@ -140,32 +140,46 @@
                         <content>
                           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                  <children>
-                                    <GridPane prefHeight="422.0" prefWidth="248.0" AnchorPane.bottomAnchor="200.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                    <GridPane layoutX="19.6" layoutY="19.6" prefHeight="223.0" prefWidth="229.0" AnchorPane.bottomAnchor="189.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="9.0" AnchorPane.topAnchor="10.0">
                                        <children>
-                                          <Label text="Anchor" GridPane.columnIndex="1" />
-                                          <Label text="Table" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                                          <Label text="Image" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                                          <ImageView fitHeight="30.0" fitWidth="30.0" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                                          <Label text="Anchor" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                                          <Label text="Table" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                                          <Label onMouseClicked="#handleImageNew" text="Image" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                          <ImageView fitHeight="30.0" fitWidth="30.0" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER">
                                              <image>
                                                 <Image url="@../../assets/Hyperlink@2x.png" />
                                              </image>
                                           </ImageView>
-                                          <ImageView fitHeight="30.0" fitWidth="30.0" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+                                          <ImageView fitHeight="30.0" fitWidth="30.0" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER">
                                              <image>
                                                 <Image url="@../../assets/TableView@2x.png" />
                                              </image>
                                           </ImageView>
-                                          <ImageView fitHeight="30.0" fitWidth="30.0" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+                                          <ImageView fitHeight="30.0" fitWidth="30.0" onMouseClicked="#handleImageNew" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
                                              <image>
                                                 <Image url="@../../assets/ImageView@2x.png" />
                                              </image>
                                           </ImageView>
+                                          <ImageView fitHeight="30.0" fitWidth="30.0" onMouseClicked="#handleDivNew" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                                             <image>
+                                                <Image url="@../../assets/HTMLTag@2x.png" />
+                                             </image>
+                                          </ImageView>
+                                          <ImageView fitHeight="30.0" fitWidth="30.0" onMouseClicked="#handleSpanNew" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+                                             <image>
+                                                <Image url="@../../assets/HTMLTag@2x.png" />
+                                             </image>
+                                          </ImageView>
+                                          <Label onMouseClicked="#handleDivNew" text="&lt;div/&gt;" GridPane.columnIndex="1" />
+                                          <Label onMouseClicked="#handleSpanNew" text="&lt;span/&gt;" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                                        </children>
                                        <columnConstraints>
                                           <ColumnConstraints hgrow="SOMETIMES" maxWidth="181.0" minWidth="10.0" prefWidth="52.0" />
                                           <ColumnConstraints hgrow="SOMETIMES" maxWidth="323.0" minWidth="10.0" prefWidth="176.0" />
                                        </columnConstraints>
                                        <rowConstraints>
+                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
