--- a/src/uimlbuddy/view/EditorOverview.fxml
+++ b/src/uimlbuddy/view/EditorOverview.fxml
@@ -140,7 +140,7 @@
                         <content>
                           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                  <children>
-                                    <GridPane layoutX="19.6" layoutY="19.6" prefHeight="223.0" prefWidth="229.0" AnchorPane.bottomAnchor="189.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="9.0" AnchorPane.topAnchor="10.0">
+                                    <GridPane layoutX="29.6" layoutY="29.6" prefHeight="248.0" prefWidth="210.0" AnchorPane.bottomAnchor="154.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="18.0" AnchorPane.topAnchor="20.0">
                                        <children>
                                           <Label text="Anchor" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                                           <Label text="Table" GridPane.columnIndex="1" GridPane.rowIndex="4" />
@@ -155,11 +155,6 @@
                                                 <Image url="@../../assets/TableView@2x.png" />
                                              </image>
                                           </ImageView>
-                                          <ImageView fitHeight="30.0" fitWidth="30.0" onMouseClicked="#handleImageNew" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
-                                             <image>
-                                                <Image url="@../../assets/ImageView@2x.png" />
-                                             </image>
-                                          </ImageView>
                                           <ImageView fitHeight="30.0" fitWidth="30.0" onMouseClicked="#handleDivNew" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                                              <image>
                                                 <Image url="@../../assets/HTMLTag@2x.png" />
@@ -172,13 +167,17 @@
                                           </ImageView>
                                           <Label onMouseClicked="#handleDivNew" text="&lt;div/&gt;" GridPane.columnIndex="1" />
                                           <Label onMouseClicked="#handleSpanNew" text="&lt;span/&gt;" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                          <ImageView fitHeight="30.0" fitWidth="30.0" onMouseClicked="#handleImageNew" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+                                             <image>
+                                                <Image url="@../../assets/TilePane@2x.png" />
+                                             </image>
+                                          </ImageView>
                                        </children>
                                        <columnConstraints>
                                           <ColumnConstraints hgrow="SOMETIMES" maxWidth="181.0" minWidth="10.0" prefWidth="52.0" />
                                           <ColumnConstraints hgrow="SOMETIMES" maxWidth="323.0" minWidth="10.0" prefWidth="176.0" />
                                        </columnConstraints>
                                        <rowConstraints>
-                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
